# Python-Modules

Python Module 00/ex1/: ft_plot_area.py
Python Module 00/ex2/: ft_harvest_total.py
Python Module 00/ex3/: ft_plant_age.py
Python Module 00/ex4/: ft_water_reminder.py
Python Module 00/ex5/: ft_count_harvest_iterative.py  ft_count_harvest_recursive.py
Python Module 00/ex6/: ft_garden_summary.py
Python Module 00/ex7/: ft_seed_inventory.py
Python Module 01/ex0/: ft_garden_intro.py
Python Module 01/ex1/: ft_garden_data.py
Python Module 01/ex2/: ft_plant_growth.py
Python Module 01/ex3/: ft_plant_factory.py
Python Module 01/ex4/: ft_garden_security.py
Python Module 01/ex5/: ft_plant_types.py
Python Module 01/ex6/: ft_garden_analytics.py
Python Module 02/ex0/: ft_first_exception.py
Python Module 02/ex1/: ft_raise_exception.py
Python Module 02/ex2/: ft_different_errors.py
Python Module 02/ex3/: ft_custom_errors.py
Python Module 02/ex4/: ft_finally_block.py
Python Module 03/ex0/: ft_command_quest.py
Python Module 03/ex1/: ft_score_analytics.py
Python Module 03/ex2/: ft_coordinate_system.py
Python Module 03/ex3/: ft_achievement_tracker.py
Python Module 06/: ft_alembic_0.py  ft_alembic_1.py  ft_alembic_2.py  ft_alembic_3.py  ft_alembic_4.py  ft_alembic_5.py  ft_distillation_0.py  ft_distillation_1.py  ft_kaboom_0.py  ft_kaboom_1.py  ft_transmutation_0.py  ft_transmutation_1.py  ft_transmutation_2.py
Python Module 07/: battle.py  capacitor.py  tournament.py
Python Module 08/ex1/: loading.py  pyproject.toml  requirements.txt
(+34 files in other folders)
